--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ progress {
 
 @media (min-width: 576px) {
   .container {
-    max-width: 540px;
+    max-width: 850px;
   }
 }
 @media (min-width: 768px) {
@@ -619,8 +619,9 @@ header*/
 }
 
 .search {
-  height: 34px;
-  position: relative;
+    height: 34px;
+    position: relative;
+    padding: 0 10px;
 
 }
 @media (max-width: 576px) {
@@ -688,7 +689,12 @@ header*/
     display:none;
   }
 }
-
+.pos-rel {
+    position: relative;
+}
+.m-r20 {
+    margin-right:20px;
+}
 /*--------------------------------------------
 header-button*/
 .header-button {
@@ -707,6 +713,7 @@ header-button*/
 
 .header-button ul{
   list-style: none;
+    height: 32px;
 }
 
 .header-button li{
@@ -726,9 +733,136 @@ header-button*/
 
 }
 
+@media (max-width: 999px) {
+    .tel-number {
+        display:none;
+    }
+}
 /*--------------------------------------------
 section banner*/
 
 .banner {
   margin-top: 40px;
+}
+.banner-title {
+    top: 200px;
+    left: 30px;
+    position: absolute;
+}
+.banner-title p {
+    font-weight: 400;
+    color: white;
+    font-size: 49px;
+    text-transform:uppercase;
+
+}
+.banner-title span {
+    color:#59D230;
+    font-weight: 900;
+
+}
+.banner-title button {
+    color:#59D230;
+    border-color:#59D230;
+    padding: 10px 100px;
+}
+
+.banner-indicator {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.banner-title__leftOne {
+    position:absolute ;
+    padding: 20px;
+
+}
+
+.banner-title__leftOne p {
+    font-style: italic;
+    font-size: 14px;
+
+}
+.banner-title__leftOne button {
+    color:#6122B1;
+    border-color:#6122B1;
+    padding: 10px 60px;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.banner-title__leftWho {
+    position: absolute;
+    padding: 20px;
+    bottom: 20px;
+}
+
+
+.banner-title__leftWho  p {
+    color: white;
+    font-size:21px;
+    font-weight: 700;
+
+}
+
+.banner-title__leftWho  a {
+    color:#59D230;
+    text-transform:uppercase;
+}
+/*--------------------------------------------
+Product Catalog*/
+.productCatalog .productCatalog-col{
+    background-color: #F7F7F7;
+
+
+}
+.productCatalog-col {
+    position: relative;
+    width: 20%;
+    height: 200px;
+    padding: 10px;
+    margin: 10px;
+    align-items: center;
+    align-self: center;
+    text-align: center;
+}
+.productCatalog-img {
+    max-width: 215px;
+    max-height: 160px;
+}
+
+.productCatalog-col img{
+    padding-bottom:30px ;
+}
+.productCatalog-title {
+    font-size: 30px;
+    font-weight: 700;
+    text-transform:uppercase;
+    text-align: center;
+    padding: 30px 0;
+
+
+}
+
+.productCatalog-name {
+    position: absolute;
+    font-size: 14px;
+    font-weight: 400;
+    color: #383838;
+    text-transform:uppercase;
+    text-align: center;
+    padding: 10px;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+}
+.productCatalog-name span {
+    text-transform:lowercase;
+}
+.productCatalog-name::after {
+
+    content: '>>';
 }
