--- a/css/style.css
+++ b/css/style.css
@@ -359,11 +359,12 @@ progress {
 
 .container  {
   width: 100%;
+  max-width: 1139px;
   margin-right: auto;
   margin-left: auto;
 }
 
-@media (min-width: 576px) {
+/*@media (min-width: 576px) {
   .container {
     max-width: 850px;
   }
@@ -387,7 +388,7 @@ progress {
     .container {
     max-width: 1320px;
   }
-}
+}*/
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -607,7 +608,7 @@ header*/
 .tel-number span {
   font-weight: 700;
   font-size: 14px;
-  padding: 0 5px;
+  /*padding: 0 5px;*/
 }
 @media (max-width: 576px) {
   .tel-number {
@@ -621,7 +622,7 @@ header*/
 .search {
     height: 34px;
     position: relative;
-    padding: 0 10px;
+   /* padding: 0 10px;*/
 
 }
 @media (max-width: 576px) {
@@ -641,7 +642,7 @@ header*/
 }
 
 .language-selection {
-   padding: 0 20px;
+
 
 }
 .info {
@@ -718,7 +719,7 @@ header-button*/
 
 .header-button li{
   position: relative;
-  padding: 5px 30px;
+  padding: 5px 20px;
   /*border-right: 1px solid #383838 ;*/
 }
 
@@ -817,11 +818,10 @@ Product Catalog*/
 .productCatalog .productCatalog-col{
     background-color: #F7F7F7;
 
-
 }
 .productCatalog-col {
     position: relative;
-    width: 20%;
+    width: 23%;
     height: 200px;
     padding: 10px;
     margin: 10px;
@@ -830,12 +830,14 @@ Product Catalog*/
     text-align: center;
 }
 .productCatalog-img {
-    max-width: 215px;
-    max-height: 160px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .productCatalog-col img{
-    padding-bottom:30px ;
+    padding-bottom:30px;
+    max-width: 127px;
+    max-height: 127px;
 }
 .productCatalog-title {
     font-size: 30px;
@@ -855,14 +857,34 @@ Product Catalog*/
     text-transform:uppercase;
     text-align: center;
     padding: 10px;
-    bottom: 10px;
+    bottom: 20px;
     left: 0;
     right: 0;
 }
 .productCatalog-name span {
     text-transform:lowercase;
 }
-.productCatalog-name::after {
-
+.productCatalog-name {
     content: '>>';
+}
+/*--------------------------------------------
+Brand*/
+.brand {
+    padding-top: 40px;
+}
+.brand-title {
+    padding: 10px 0;
+    width: 100%;
+    background-color: #F7F7F7;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.brand-title span {
+    font-size: 21px;
+    font-weight: 700;
+}
+.brand img {
+    max-height: 65px;
+
 }
