--- a/css/style.css
+++ b/css/style.css
@@ -1056,5 +1056,102 @@ contactUs*/
 /*--------------------------------------------
 comment*/
 .comment {
+    padding-top:50px;
+}
+.comment .col {
+    position: relative;
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    padding:20px;
+    max-width: 350px;
+    width: 100%;
+    margin: 10px;
+}
+
+.comment-title {
+    display: flex;
+    justify-content: space-between;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 27px;
+    padding: 5px 0;
+
+}
+.comment-pref {
+    display: flex;
+    width: 85px;
+    justify-content: space-around;
+}
+.comment-name  {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0em;
+}
+.comment-content {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+}
+.comment-date  {
+    position: relative;
+    text-align: end;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 13px;
+    letter-spacing: 0em;
+    color: #939393;
+}
+.comment-button {
+    text-align: center;
+}
+
+.comment-button button {
+    border-color: #59D230;
+    padding: 10px 50px;
+    position:relative;
+}
+
+.comment-button svg {
+    position: absolute;
+    display: block;
+    top: 16px;
+    left: 20px;
+}
+.comment-rating {
+    position: absolute;
+    right: 30px;
+    top: 16px;
+}
+.comment-rating svg{
+    position:relative;
+    right: 0;
+    top: 0;
+}
+.comment-rating div{
+    position: absolute;
+    right: 18px;
+    top: 0;
+}
+.pref-left {
+    margin-left: 10px ;
+}
+
+/*--------------------------------------------
+blog*/
+.blog {
+     padding-top: 50px;
+}
+.blog-title {
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 27px;
+}
+
+.blog-title span{
+    font-size: 12px;
+    font-weight: 400;
+    color: #6122B1;
 
 }
