--- a/css/style.css
+++ b/css/style.css
@@ -1141,17 +1141,58 @@ comment*/
 /*--------------------------------------------
 blog*/
 .blog {
-     padding-top: 50px;
+    padding-top: 50px;
 }
+.blog .row {
+    border-top:1px solid #D9D9D9;
+    border-bottom:1px solid #D9D9D9;
+    padding: 20px 0;
+}
+
 .blog-title {
     font-size: 21px;
     font-weight: 700;
     line-height: 27px;
+}
+.blog-col {
+    display: flex;
 }
 
 .blog-title span{
     font-size: 12px;
     font-weight: 400;
     color: #6122B1;
+}
 
+.blog-content {
+
+
+}
+
+.blog-col__title {
+    max-width: 150px;
+    font-family: PT Sans;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 14px;
+
+
+}
+.blog-col__date {
+    color: #383838;
+    font-family: PT Sans;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 12px;
+
+}
+/*--------------------------------------------
+blog*/
+.footer {
+    margin-top: 200px;
+    max-height: 340px;
+    width: 100%;
+    background-color: #383838;
+    color: white;
+    width: 100%;
 }
